--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                             <h3 class="metric-title mb-3">Marketing & Campaign Highlights</h3>
                             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                                 <div class="metric-card">
-                                    <h4 class="font-bold text-lg mb-2">Occasion Post (Puja)</h4>
+                                    <h4 class="font-bold text-lg mb-2">Occasion Post </h4>
                                     <img src="https://placehold.co/400x300/ffedd5/c2410c?text=Happy+Durga+Puja" class="rounded w-full h-auto">
                                 </div>
                                 <div class="metric-card">
@@ -384,6 +384,13 @@
                         <div class="metric-card">
                             <h4 class="font-bold text-lg mb-2">Facebook Posts</h4>
                             <div class="grid grid-cols-3 gap-2">
+                                <img src="https://scontent.fccu27-1.fna.fbcdn.net/v/t51.82787-15/526599480_18471727189077889_6347163690697537762_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=mWX8ZuMh8aEQ7kNvwHO9JXz&_nc_oc=Adnt9cBwElZCxsZBx0Pw5JOmxK0AZ1ogQt-lC-U0LhiJvS2RBSiHK4kKVKBkHwtC35pCAlG9_DtkF-2iJJ1iipss&_nc_zt=23&_nc_ht=scontent.fccu27-1.fna&_nc_gid=GSk247OpfReCZYoWvupmtQ&oh=00_AfXy1VIlTbzpjVK_M3mCUBXx475iX_5MnB36l_Zhz9cY7Q&oe=68AE0D6D" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu20-1.fna.fbcdn.net/v/t39.30808-6/526043255_1088004980000517_2741631701593026176_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_aid=0&_nc_ohc=qP4x1yX6RxUQ7kNvwGRDD4X&_nc_oc=AdkOgP9FLmSFRm3pEBKCP8LqbLFX8A4GDjIEsnVT1Lfvfs-SfdgL5km2wojMHn1it5kh51T9hlBrmmg20X0Rdjzu&_nc_zt=23&_nc_ht=scontent.fccu20-1.fna&_nc_gid=Q54be-ImHgTTiMM08FGhlA&oh=00_AfXnu_eGlYh8p1snZRMsHObqpkXlw-VR75sGCYEW4Y3Drw&oe=68AE13D2" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu27-1.fna.fbcdn.net/v/t39.30808-6/524775009_1087180620082953_7183009549163484434_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_ohc=XPspd9oBmvoQ7kNvwEB1ETQ&_nc_oc=Adnvog_NLRimHtVXaNngZJIsQtrPE7NyxedUHYwMQBC7_4s5rGzgROepjqgRkhrmAW8YTxDy-EzrTIWq2dQXh9Nb&_nc_zt=23&_nc_ht=scontent.fccu27-1.fna&_nc_gid=OCpyC0QqFGYRZm8l10FSiw&oh=00_AfXPeOOBfjStIu0zxfZCcdGL_VmsroWHb5eBk4goKssYfw&oe=68AE0F41" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu20-1.fna.fbcdn.net/v/t51.82787-15/520286713_18469243564077889_4527934316239256230_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=cvY_sMK48R0Q7kNvwHK_aF2&_nc_oc=AdkdXa1NcNm0VbozYHmX2ykfJyc84cMUOKVYiIyiQnDraCF8EJme5d4mTqmDKw4x6XO5vpyu9t9oHV9jIsIX8ZHv&_nc_zt=23&_nc_ht=scontent.fccu20-1.fna&_nc_gid=fCK3DxlDCdUanpzEOBjfqQ&oh=00_AfVhzXljaG68IUrR4OaDF9RUMLvITd9Yfn1n-pD2pMKQHg&oe=68AE0F07" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu27-2.fna.fbcdn.net/v/t51.75761-15/505767915_18463967518077889_3079287931890201292_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=R9doDFIScsUQ7kNvwHmFfjf&_nc_oc=AdmXS-1A2yeUnOeh-BIUh6X4zGA90v3r15Wj73gypdO_cOUlYAEyi65rkM5joYKtkQFVykKjK32SuBBq4e2TzlGc&_nc_zt=23&_nc_ht=scontent.fccu27-2.fna&_nc_gid=PAujb7k0DhEPlva-yuf-gg&oh=00_AfXvaRZd6St7Up0Q4wjNwMK5fpqR2EmmMeY7NUgL58s89A&oe=68AE106C" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu27-2.fna.fbcdn.net/v/t51.75761-15/501939686_18460772503077889_8117034853613804662_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=ho9-vtQQ08wQ7kNvwHhI5LA&_nc_oc=AdkNEOgxN71s3e8KSAimyU9Ph9_FkKexEhVb3w-LsPbuhQrcXxrlF7rjiUc8d1tBG9LcOFD2PjlRWXGEUmA33yta&_nc_zt=23&_nc_ht=scontent.fccu27-2.fna&_nc_gid=rrlyTeMiGodceqRNDAtfIQ&oh=00_AfXfAnUI-qwKNNqE5lsh5m6-6zV4YApMOWdrmE12fC8ObQ&oe=68AE1426" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu27-2.fna.fbcdn.net/v/t51.75761-15/502050670_18460610368077889_4563763900021066940_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=Ml8Uz_lWcj0Q7kNvwFIkQRy&_nc_oc=Adnko6A0nhHZkf_rP5QVQ2MrCUlwP3hZPPxlPkYveypXKKobBDhdmVMltygl0hNSNvUaosNHUYCenbBUFHxlqPD0&_nc_zt=23&_nc_ht=scontent.fccu27-2.fna&_nc_gid=bOqwyUcw4TnChxCaJW6bag&oh=00_AfXA_vQCKzta3UpEaFp-fQdAY2M_-lGylEtm9bbBtV3aQw&oe=68AE2EF9" class="rounded w-full h-auto">
                                 <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
                                 <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
                                 <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
@@ -392,7 +399,7 @@
                         <div class="metric-card">
                             <h4 class="font-bold text-lg mb-2">Instagram Grid</h4>
                             <div class="grid grid-cols-3 gap-2">
-                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://www.instagram.com/p/DNgFLrTPbY2/?utm_source=ig_embed&amp;utm_campaign=loading" class="rounded w-full h-auto">
                                 <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
                                 <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
                             </div>
@@ -740,5 +747,6 @@
 
 </body>
 </html>
+
 
 
