--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             <div class="scrollable-section">
                                 <h4 class="font-bold text-lg mb-2">Instagram Grid</h4>
                                 <div class="grid grid-cols-3 gap-2">
-                                    <img src="https://www.instagram.com/p/DL6xNvCvGGR/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="rounded w-full h-auto">
+                                    <img src="https://www.instagram.com/p/DL6xNvCvGGR/?utm_source=ig_web_copy_link" class="rounded w-full h-auto">
                                     <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
                                     <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
                                     <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
@@ -747,6 +747,7 @@
 
 </body>
 </html>
+
 
 
 
