--- a/index.html
+++ b/index.html
@@ -306,7 +306,12 @@
                             <div class="scrollable-section">
                                 <h4 class="font-bold text-lg mb-2">Instagram Grid</h4>
                                 <div class="grid grid-cols-3 gap-2">
-                                    <img src="https://www.instagram.com/p/DNgFLrTPbY2/?utm_source=ig_embed&amp;utm_campaign=loading" class="rounded w-full h-auto">
+                                    <blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DL6xNvCvGGR/" 
+    data-instgrm-version="14">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+
                                     <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
                                     <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
                                     <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
@@ -773,6 +778,7 @@
 
 </body>
 </html>
+
 
 
 
