--- a/index.html
+++ b/index.html
@@ -311,6 +311,49 @@
     data-instgrm-version="14">
 </blockquote>
 <script async src="//www.instagram.com/embed.js"></script>
+                                    <blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DNgFLrTPbY2/" 
+    data-instgrm-version="14">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DM7lkL3po_t/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; margin:auto;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote 
+    class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DNZwyVJMqww/?utm_source=ig_embed&utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:100%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DM4d-dpJ3RM/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DMz9H94Tg4m/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DMxajjNJUtY/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DMiCDlOJ5h3/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; margin:auto;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+
                                     
 
                                    
@@ -811,6 +854,7 @@
 
 </body>
 </html>
+
 
 
 
