--- a/index.html
+++ b/index.html
@@ -575,9 +575,85 @@
                         <div class="metric-card">
                             <h4 class="font-bold text-lg mb-2">Instagram Grid (525K+ Followers)</h4>
                             <div class="grid grid-cols-3 gap-2">
-                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
-                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
-                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DNZwMYUI_Qs/?utm_source=ig_embed&utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; margin:auto;">
+</blockquote>
+
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DNW65bINlRO/?utm_source=ig_embed&utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; border-radius:3px; margin:1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DNGNbw1ymWI/?utm_source=ig_embed&utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; margin:auto;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DLJZWhQykRL/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; margin: auto;">
+</blockquote>
+
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DKllVUJykWj/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DKgNReJNjWC/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+</blockquote>
+
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote 
+  class="instagram-media" 
+  data-instgrm-permalink="https://www.instagram.com/p/DKcVosVysZW/?utm_source=ig_embed&amp;utm_campaign=loading" 
+  data-instgrm-version="14" 
+  style="max-width:540px; min-width:326px; width:99.375%; margin:auto; border:0; padding:0;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DKWEiwMC1Xc/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; margin: auto;">
+</blockquote>
+
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DJy0vBeNSNw/?utm_source=ig_embed" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; width:100%; margin:auto;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DJUM5t9t10s/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DIpwwXJy-Bt/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+</blockquote>
+
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DLJZWhQykRL/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:100%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+
                             </div>
                         </div>
                     </div>
@@ -674,9 +750,81 @@
                         <div class="metric-card">
                             <h4 class="font-bold text-lg mb-2">Instagram Grid</h4>
                             <div class="grid grid-cols-3 gap-2">
-                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
-                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
-                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <blockquote 
+  class="instagram-media" 
+  data-instgrm-permalink="https://www.instagram.com/p/DJG4LZlqhhJ/?utm_source=ig_embed&amp;utm_campaign=loading" 
+  data-instgrm-version="14" 
+  style="background:#FFF; border:0; margin:1px; max-width:540px; width:100%;"
+>
+  <a href="https://www.instagram.com/p/DJG4LZlqhhJ/?utm_source=ig_embed&amp;utm_campaign=loading" target="_blank">
+    View this post on Instagram
+  </a>
+</blockquote>
+
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DCyCp9RShSo/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; margin: 1px auto; padding:0; border:0;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote 
+    class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DAh7r75RQHl/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; width:100%; margin:auto;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DAh7r75RQHl/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:calc(100% - 2px);">
+    <a href="https://www.instagram.com/p/DAh7r75RQHl/?utm_source=ig_embed&amp;utm_campaign=loading" target="_blank">
+        View this post on Instagram
+    </a>
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DAY_2DgTifx/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:100%;">
+    <a href="https://www.instagram.com/p/DAY_2DgTifx/?utm_source=ig_embed&amp;utm_campaign=loading" 
+       target="_blank">View this post on Instagram</a>
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote 
+  class="instagram-media" 
+  data-instgrm-permalink="https://www.instagram.com/p/DAYg3RGSK72/?utm_source=ig_embed&utm_campaign=loading" 
+  data-instgrm-version="14" 
+  style="max-width:540px; min-width:326px; margin:auto;">
+</blockquote>
+
+<script async src="https://www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DAYHDL7vhlI/" data-instgrm-version="14">
+  <a href="https://www.instagram.com/p/DAYHDL7vhlI/" target="_blank">
+    View this post on Instagram
+  </a>
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/DAV9cngSHgx/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/C9q9_MzIgD1/?utm_source=ig_embed&amp;utm_campaign=loading" 
+    data-instgrm-version="14" 
+    style="max-width:540px; min-width:326px; width:100%; margin:1px auto; border-radius:6px; overflow:hidden; background:#fff;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" 
+    data-instgrm-permalink="https://www.instagram.com/p/C9p5ejIh5BG/" 
+    data-instgrm-version="14" 
+    style="background:#FFF; border:0; margin:1px; max-width:540px; width:99.375%;">
+</blockquote>
+<script async src="//www.instagram.com/embed.js"></script>
+
                             </div>
                         </div>
                     </div>
@@ -854,6 +1002,7 @@
 
 </body>
 </html>
+
 
 
 
