--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                             <h3 class="metric-title mb-3">Marketing & Campaign Highlights</h3>
                             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                                 <div class="metric-card">
-                                    <h4 class="font-bold text-lg mb-2">Occasion Post (Puja)</h4>
+                                    <h4 class="font-bold text-lg mb-2">Occasion Post </h4>
                                     <img src="https://placehold.co/400x300/dbeafe/1d4ed8?text=Happy+Durga+Puja" class="rounded w-full h-auto">
                                 </div>
                                 <div class="metric-card">
@@ -898,9 +898,16 @@
                         <div class="metric-card">
                             <h4 class="font-bold text-lg mb-2">Facebook Posts</h4>
                             <div class="grid grid-cols-3 gap-2">
-                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
-                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
-                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-1.fna.fbcdn.net/v/t51.82787-15/532335284_18395871865139358_5130397498415781782_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=VZ8gPLvBsAAQ7kNvwExi7o7&_nc_oc=AdmVXsUvXaZ935r2jNhRco2egvAS8xjOF8DE-yBsI3qe0Bqvb6bIeQLNHHY1lP28vks&_nc_zt=23&_nc_ht=scontent.fccu2-1.fna&_nc_gid=oyYUxsOfYdA31Pp4F0NdIA&oh=00_AfXHOdQQ9XLn-BkOBxXAkVcPWCgdRexSPYcrDRvFKm92RQ&oe=68AE2F0A" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-1.fna.fbcdn.net/v/t51.82787-15/531514383_18395839978139358_651578880817160872_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=rsS5jXwF77MQ7kNvwH_43_7&_nc_oc=Adm_XwX0gu5rQNG30KSyLS4c0veJX8sxP3IE18s-kBxMyADwBHue0wmL2DcyalLJ5Z8&_nc_zt=23&_nc_ht=scontent.fccu2-1.fna&_nc_gid=h0n0cSoceQdkmN0Nd8QI9Q&oh=00_AfWhwcbQQtzDo-KS2GM2mhkwwuxoLjM4xoB8XAP6A6Zneg&oe=68AE1F4B" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-4.fna.fbcdn.net/v/t39.30808-6/533447340_1184590447035629_4763678894535503771_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=QQZBBj8q7SsQ7kNvwGYxFH9&_nc_oc=Adl0YOgrO95yQJy0wXTG0qXHtz62pEuJWHQBJlU_0zbRQMDcFx7l8csRjIk-1xJ5lhE&_nc_zt=23&_nc_ht=scontent.fccu2-4.fna&_nc_gid=kAFbzVa3RM8iDmhrZE0wVw&oh=00_AfVWQjZiKA8mccP3J-OayIJQw7h_lM-0aMjX57h4S97I3A&oe=68AE29F7" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-1.fna.fbcdn.net/v/t51.82787-15/529819444_18395176111139358_4634553255624104251_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=6G-b-1k14aoQ7kNvwEIiEoq&_nc_oc=AdkkffGpO5eGctISZLn8M_Q3zi8KUnONkK43njc3BrRNMzeIoZXxjga6afUan2B4lpE&_nc_zt=23&_nc_ht=scontent.fccu2-1.fna&_nc_gid=q995C7AYJJKJRQ9_Lg1aJw&oh=00_AfX7f5pXL2qY7sBMGajBFJC3A0znJBJm_STHchSH7L-eAg&oe=68AE2EC8" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-3.fna.fbcdn.net/v/t51.82787-15/525998770_18394590547139358_468938992378940190_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=iEyBnNWGVwwQ7kNvwFMu5ji&_nc_oc=AdmueFKGBuPsYjGGvqBiFIGgtlqI2fm-YDzxe983-9aZAn8ab2_LMXDu3X3RugMZnKs&_nc_zt=23&_nc_ht=scontent.fccu2-3.fna&_nc_gid=ttl120l9N33cWBtGZn2NKw&oh=00_AfUKsn9M1l1_EaA9S3xgwvtCErZJvwaA6pgFcwAdYMHPNw&oe=68AE3398" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-3.fna.fbcdn.net/v/t51.82787-15/526773099_18394386322139358_506983208690342089_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=lH7VbHTZmY4Q7kNvwFMGGFn&_nc_oc=AdmWytOCkKIrSGrhGZRFTxdjkSIQ0OFOVj_V3yJoVczamYLUObry-3xXmOhmaAZxQa4&_nc_zt=23&_nc_ht=scontent.fccu2-3.fna&_nc_gid=gV8hJIdTVPB6auVy3Uy8Xg&oh=00_AfXgx0zgs0c_vCrSCftKndNsCl8zkeAV1SoTkzKaVamJXQ&oe=68AE2E84" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-1.fna.fbcdn.net/v/t51.82787-15/521289993_18392963746139358_7648891923060004377_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=9nzemktkeFUQ7kNvwGvW-m_&_nc_oc=Adl_EJAid71s7Vjf5wAZARKKnVowO5ZWZluFvJzx0ztDxuCLf-N-YA0G5YcCAZD004A&_nc_zt=23&_nc_ht=scontent.fccu2-1.fna&_nc_gid=WWiZWw24033LpjTjIE9R0Q&oh=00_AfVkCunUROGdgTCHAePE9sv8DSrzucKNJqSR3GW2iH_wlQ&oe=68AE1DF3" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-3.fna.fbcdn.net/v/t51.82787-15/522662831_18392963728139358_4254208147539242785_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=VzFJbLUKC1MQ7kNvwF2oGg9&_nc_oc=AdlBPXcjjA0nLKFrfAR1fbm-YhuQbVX7TUC9euN5utS2TM6HnG474GXPhqKm_hMt52Q&_nc_zt=23&_nc_ht=scontent.fccu2-3.fna&_nc_gid=o4mY8tQ5PKWc4OEBCbpvfw&oh=00_AfVBmgXiKUq08UjiBgibbe8qK9kPQQ-EWMMVA-OuaKnVfA&oe=68AE2F12" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-4.fna.fbcdn.net/v/t51.82787-15/521525985_18392963719139358_4251187489969770335_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_ohc=_EQAFJljzmUQ7kNvwF2HKDg&_nc_oc=AdnXbHG67OrYGiF55p1McVpm2lsioUyFP28Q6TueCjOREq1McQkB6Ea1uG7l8716mYs&_nc_zt=23&_nc_ht=scontent.fccu2-4.fna&_nc_gid=7JF5Eo_MYwC4zsyaPU3Yiw&oh=00_AfUW0MVrMkvwnq6RUP8H5Q0v5G81n2Uk6Wg8hkLzWhoD9g&oe=68AE4802" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu2-4.fna.fbcdn.net/v/t51.82787-15/516936719_18391228516139358_5138089028843699578_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=eXIkUkkIfHYQ7kNvwGsHAw-&_nc_oc=AdnIuazzoqQPI3HI1weZPJmUioZyZlJxFebIl_NledXyV3d21JsiLX3mkLQqCJHwk-0&_nc_zt=23&_nc_ht=scontent.fccu2-4.fna&_nc_gid=qs_ZaVQgMkJ40Bu9O1t-Aw&oh=00_AfUPULfNO8DOOJae7QFEaL7bmXJxnVCYt6tl_KZqXc6uGA&oe=68AE2A25" class="rounded w-full h-auto">
                             </div>
                         </div>
                         <div class="metric-card">
@@ -1002,6 +1009,7 @@
 
 </body>
 </html>
+
 
 
 
